syntax = "proto3";

import "google/protobuf/timestamp.proto";
option java_multiple_files = true;
package ru.company.kafka.service;

service BankAccountInfoService {
    rpc getBankAccountsByAccountType (AccountTypeRequestProto) returns (BankAccountsProto);
    rpc getAllBankAccounts (Empty) returns (BankAccountsProto);
}

message BankAccountsProto {
    repeated BankAccountInfoProto bankAccountInfo = 1;
}

message Empty {

}

message AccountTypeRequestProto {
    TypeAccountProto accountType = 1;
}

message BankAccountInfoProto {
    string uuid = 1;
    BankAccountProto bankAccount = 2;
    AddressProto address = 3;
}

message BankAccountProto {
    string firstName = 1;
    string lastName = 2;
    double balance = 3;
    google.protobuf.Timestamp birthday = 4;
    TypeAccountProto type = 5;
}

message AddressProto {
    string state = 1;
    string city = 2;
    string street = 3;
}

enum TypeAccountProto {
    CREDIT = 0;
    DEBIT = 1;
}